tests/ui/consts/const-blocks/nll-fail.stderr
error[E0277]: the trait `Copy` is not implemented for `Option<Bar>`
  --> $DIR/nll-fail.rs:11:38
   |
LL |         let arr: [Option<Bar>; 2] = [x; 2];
   |                                      ^ the trait `Copy` is not implemented for `Option<Bar>`, which is required by `Option<Bar>: Copy`
   |
   = help: the trait `Copy` is implemented for `Option<T>`
   = note: required for `Option<Bar>` to implement `Copy`
   = note: the `Copy` trait is required because this value will be copied for each element of the array
   = help: consider using `core::array::from_fn` to initialize the array
   = help: see https://doc.rust-lang.org/stable/std/array/fn.from_fn.html for more information

error[E0277]: the trait `Copy` is not implemented for `Option<Bar>`
  --> $DIR/nll-fail.rs:17:38
   |
LL |         let arr: [Option<Bar>; 2] = [x; 2];
   |                                      ^ the trait `Copy` is not implemented for `Option<Bar>`, which is required by `Option<Bar>: Copy`
   |
   = help: the trait `Copy` is implemented for `Option<T>`
   = note: required for `Option<Bar>` to implement `Copy`
   = note: the `Copy` trait is required because this value will be copied for each element of the array
   = help: consider using `core::array::from_fn` to initialize the array
   = help: see https://doc.rust-lang.org/stable/std/array/fn.from_fn.html for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
